--- a/rentcab/inquilinos/templates/inquilinos/cab_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/cab_detail.html
@@ -1,74 +1,48 @@
 {% extends 'inquilinos/base.html' %}{% block content %}{% load static %}
 {# Load the tag library #}
 {% load bootstrap4 %}
-
 {# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
-
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
-<center><h1>{{cab.nombre}}</h1></center>
-<div class="col-md-8 offset-md-2">
+
+
 <center>
-{% comment %} <ul> {% endcomment %}
-{% for inst in cab.instalacion_set.all  %}
-    {% comment %} <li>{{ inst.descripcion }}</li> {% endcomment %}
-    <p>{{ inst.descripcion }}</p>
-{% endfor %}
-{% comment %} <li>{{cab.cantHabitaciones}} habitaciones.</li> {% endcomment %}
-<p>{{ cab.cantHabitaciones }} habitaciones.</p>
-{% comment %} </ul> {% endcomment %}
-{% buttons %}
-<button 
-    type="button" 
-    onclick="location.href='{% url 'inquilinos:reg-res' cab.slug %}'" 
-    class="btn btn-primary"
-        >
-        Consultar disponibilidad
-        </
-button>
-{% endbuttons %}
+    <h1>{{cab.nombre}}</h1>
 </center>
 
-<div id="gallery" class="carousel slide carousel-fade marigen" data-ride="carousel" data-aos="fade-up" data-aos-delay="300">
-
-    <ul class="carousel-indicators" >
-      <li data-target="#gallery" data-slide-to="0" class="active"></li>
-      {% for foto in cab.foto_set.all %}
-      {% if forloop.last %}<! --{% endif %}<li data-target="#gallery" data-slide-to="{{ forloop.counter }}"></li>
-      {% endfor %}
-    </ul>
-
-    <div class="carousel-inner">
-    {% for foto in cab.foto_set.all %}  
-        <div class="carousel-item {% if forloop.counter0 == 0 %}active{% endif %}">
-
-        <img src="{{foto.foto.url}}" class="d-block  w-100 img-fluid rounded maseit" alt="Responsive image">
-        <div class="carousel-caption d-none d-md-block rounded position-absolute bg-custom">
-            {% comment %} <h5>{{img.Img_title}}</h5> {% endcomment %}
-            <p>{{foto.descripcion}}</p>
-          </div>
-    </div>
-    {% endfor %}  
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="col-md-8 offset-md-2">
+    <center>
+        {% for inst in cab.instalacion_set.all  %}
+            <p>{{ inst.descripcion }}</p>
+        {% endfor %}
+        <p>{{ cab.cantHabitaciones }} habitaciones.</p>
+        {% buttons %}
+        <button type="button" onclick="location.href='{% url 'inquilinos:reg-res' cab.slug %}'" class="btn btn-primary">
+            Consultar disponibilidad
+        </button> 
+        {% endbuttons %} 
+    </center> 
+    <div id="gallery" class="carousel slide carousel-fade marigen" data-ride="carousel" data-aos="fade-up" data-aos-delay="300">
+        <ul class="carousel-indicators">
+            <li data-target="#gallery" data-slide-to="0" class="active"></li>
+            {% for foto in cab.foto_set.all %}
+                {% if forloop.last %}<! -- {% endif %} 
+                <li data-target="#gallery" data-slide-to="{{ forloop.counter }}"></li>
+            {% endfor %}
+        </ul>
+        <div class="carousel-inner">
+            {% for foto in cab.foto_set.all %}
+                <div class="carousel-item {% if forloop.counter0 == 0 %}active{% endif %}">
+                    <img src="{{foto.foto.url}}" class="d-block  w-100 img-fluid rounded maseit" alt="Responsive image">
+                    <div class="carousel-caption d-none d-md-block rounded position-absolute bg-custom">
+                        <p>{{foto.descripcion}}</p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
 
 </div>
-
-
-
 
 {% endblock content %}
-
