--- a/rentcab/inquilinos/templates/inquilinos/index.html
+++ b/rentcab/inquilinos/templates/inquilinos/index.html
@@ -1,7 +1,7 @@
 {% extends 'inquilinos/base.html' %}
 {% block content %}
 {% load static %}
-<div>
+<div class="mt-5">
     <div class="bg-light p-5 rounded">
       <div class="col-sm-8 mx-auto">
         <img src="{% static 'inquilinos/images/lapraderalogo.jpg' %}" class="img-thumbnail" style="max-height:200px;float: left;margin-right: 20px;" alt="">
