--- a/rentcab/inquilinos/templates/inquilinos/base.html
+++ b/rentcab/inquilinos/templates/inquilinos/base.html
@@ -2,11 +2,6 @@
 <html lang="en">
 
 <head>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
@@ -22,71 +17,17 @@
   <link rel="stylesheet" href="{% static 'inquilinos/css/stylesheet.css' %}">
   <link href="{% static 'inquilinos/css/bootstrap.min.css' %}" rel="stylesheet">
 
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
-
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
-
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
-
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
-
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
-
-
   <!-- Custom styles for this template -->
   <link href="{% static 'inquilinos/css/navbar.css' %}" rel="stylesheet">
 </head>
 
-<body style="font-family: 'Poppins', sans-serif;">
+<body style="font-family: 'Poppins', sans-serif;" class="bg-light">
 
   <main>
 
     {% comment %} <nav class="navbar navbar-expand-xl navbar-dark bg-success" aria-label="Sixth navbar example">
       {% endcomment %}
-      <nav class="navbar navbar-expand-xl navbar-dark">
+      <nav class="navbar navbar-expand-xl fixed-top navbar-light border-bottom border-green">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06"
             aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,12 +35,15 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarsExample06">
-            <ul class="navbar-nav me-auto mb-2 mb-xl-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'inquilinos:index' %}">Inicio</a>
+            {% comment %} <ul class="navbar-nav me-auto mb-2 mb-xl-0"> {% endcomment %}
+              <ul class="navbar-nav me-auto mt-0 mb-0">
+              <li class="nav-item px-2">
+                <button class="btn btn-outline-success" type="button" <button type="button" onclick="location.href='{% url 'inquilinos:index'%}'">Inicio</button>
+                {% comment %} <a class="nav-link active" aria-current="page" href="{% url 'inquilinos:index' %}">Inicio</a> {% endcomment %}
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar sesión</a>
+                {% comment %} <a class="nav-link" href="#">Iniciar sesión</a> {% endcomment %}
+                <button class="btn btn-outline-success active" type="button">Iniciar sesión</button>
               </li>
               {% comment %} <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
@@ -126,9 +70,9 @@
         </div>
       </nav>
   </main>
-
+  <div class="mt-5">
   {% block content %}{% endblock content %}
-
+  </div>
   <script src="{% static 'inquilinos/js/bootstrap.bundle.min.js' %}"></script>
 
 
