--- a/rentcab/inquilinos/templates/inquilinos/base.html
+++ b/rentcab/inquilinos/templates/inquilinos/base.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
 
   {% load static %}
-
+  <link rel="stylesheet" href="{% static 'inquilinos/icons/bootstrap-icons/font/bootstrap-icons.css' %}">
   <link rel="stylesheet" href="{% static 'inquilinos/css/stylesheet.css' %}">
   <link href="{% static 'inquilinos/css/bootstrap.min.css' %}" rel="stylesheet">
 
