--- a/rentcab/inquilinos/templates/inquilinos/reg_res.html
+++ b/rentcab/inquilinos/templates/inquilinos/reg_res.html
@@ -5,6 +5,7 @@
 {% csrf_token %}
 <br>
 <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
+{% comment %} <div class="offset-md-4 flex justify-content-center border rounded bg-white"></div> {% endcomment %}
 {% crispy form %}
 {% comment %} <i class="bi bi-calendar-date"></i> {% endcomment %}
 </div>
