--- a/rentcab/inquilinos/templates/inquilinos/cab_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/cab_detail.html
@@ -4,15 +4,32 @@
     <h1>{{cab.nombre}}</h1>
 </center>
 <div class="col-md-8 offset-md-2">
-    <center>
+    {% comment %} <center> {% endcomment %}
+        {% comment %} <div class=" p-5 d-flex justify-content-center border rounded bg-white"> {% endcomment %}
+        <ul class="list-group col-md-6 offset-md-3 mb-3 text-center">
         {% for inst in cab.instalacion_set.all  %}
-            <p>{{ inst.descripcion }}</p>
+            <li class="list-group-item">{{ inst.descripcion }}<i class="bi bi-check-all"></i></li>
         {% endfor %}
-        <p>{{ cab.cantHabitaciones }} habitaciones.</p>
-        <button type="button" onclick="location.href='{% url 'inquilinos:reg-res' cab.slug %}'" class="btn btn-primary mb-2">
+        <li class="list-group-item">Precio final por noche: {{ cab.costoPorNoche }}</li>
+            <li class="list-group-item">{{ cab.cantHabitaciones }}{% if cab.cantHabitaciones > 1 %} habitaciones.{% else %} habitación.{% endif %}</li>
+        </ul>
+        {% comment %} </div> {% endcomment %}
+        <button type="button" onclick="location.href='{% url 'inquilinos:reg-res' cab.slug %}'" class="btn btn-primary col-md-6 offset-md-3 mb-3">
             Consultar disponibilidad
         </button> 
-    </center> 
+    {% comment %} </center>  {% endcomment %}
+
+
+
+
+
+
+
+
+
+
+
+
     {% comment %} <div id="gallery" class="carousel slide carousel-fade marigen" data-ride="carousel" data-aos="fade-up" data-aos-delay="300"> {% endcomment %}
         <div id="gallery" class="carousel slide marigen" data-bs-ride="carousel">
         <ul class="carousel-indicators">
@@ -32,14 +49,14 @@
                 </div>
             {% endfor %}
         </div>
-        {% comment %} <button class="carousel-control-prev" type="button" data-bs-target="#gallery" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#gallery" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#gallery" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-          </button> {% endcomment %}
+          </button> 
 
 </div>
 </div>
