--- a/rentcab/inquilinos/templates/inquilinos/reg_res.html
+++ b/rentcab/inquilinos/templates/inquilinos/reg_res.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 {% csrf_token %}
 <br>
-<div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
+<div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white" id="divreserva">
 {% comment %} <div class="offset-md-4 flex justify-content-center border rounded bg-white"></div> {% endcomment %}
 {% crispy form %}
 {% comment %} <i class="bi bi-calendar-date"></i> {% endcomment %}
@@ -13,7 +13,6 @@
     var today = "{{ today }}";
     var allowedDates = {{allowed_dates|safe}};
     var disabledDates = {{disabled_dates|safe}}
-    console.log(allowedDates);
     const picker = new Litepicker({
         element: document.getElementById('litepicker'),
         singleMode: false,
@@ -46,6 +45,23 @@
               return false;
         },
         resetButton: true,
-      });   
+        setup: (picker) => {
+          picker.on('selected', (date1, date2) => {
+            // console.log();
+            let costoPorNoche = parseFloat({{ costoPorNoche }}) ;
+            let precioFinal = (date2.diff(date1, 'days')) * costoPorNoche;
+            updatePrecio(precioFinal);
+          });
+        },
+      });
+
+      function updatePrecio(precioFinal) {
+        console.log(precioFinal);
+        var ptag = document.getElementById('ptag');
+        ptag.innerHTML = ''
+        var text = document.createTextNode("Precio final: $" + precioFinal);
+        ptag.appendChild(text);
+      };
+
 </script>
 {% endblock content %} 
