--- a/rentcab/inquilinos/templates/inquilinos/reg_res.html
+++ b/rentcab/inquilinos/templates/inquilinos/reg_res.html
@@ -5,14 +5,12 @@
 {% csrf_token %}
 <br>
 <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white" id="divreserva">
-{% comment %} <div class="offset-md-4 flex justify-content-center border rounded bg-white"></div> {% endcomment %}
 {% crispy form %}
-{% comment %} <i class="bi bi-calendar-date"></i> {% endcomment %}
 </div>
 <script>
     var today = "{{ today }}";
-    var allowedDates = {{allowed_dates|safe}};
-    var disabledDates = {{disabled_dates|safe}}
+    var allowedDates = {{allowed_dates|safe}}; // CREAR ENDPOINT
+    var disabledDates = {{disabled_dates|safe}}; // CREAT ENDPOINT
     const picker = new Litepicker({
         element: document.getElementById('litepicker'),
         singleMode: false,
@@ -26,6 +24,7 @@
         format : "DD/MM/YYYY",
         lockDaysFormat : "DD/MM/YYYY",
         minDate : today,
+        startDate: today,
         numberOfMonths : 2,
         numberOfColumns: 2,
         lang : 'es-AR',
