--- a/rentcab/inquilinos/templates/inquilinos/huesped_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/huesped_detail.html
@@ -3,18 +3,23 @@
 <br>
 <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white" id="divreserva">
     <div class="container">
+        {% for message in messages  %}
+            <div class="row">
+                <p id="messages">{{ message }}</p>
+            </div>
+        {% endfor %}
         <div class="row">
-<h1> {{ huesped }} </h1>
-</div>
-<div class="row">
-<h2> {{ huesped.telefono }} </h2>
-</div>
-<div class="row">
-<ul>
-    <li>{{ huesped.usuario.username }}</li>
-    <li>{{ huesped.usuario.email }}</li>
-</ul>
-</div>
-</div>
+            <h1> {{ huesped }} </h1>
+        </div>
+        <div class="row">
+            <h2> {{ huesped.telefono }} </h2>
+        </div>
+        <div class="row">
+            <ul>
+                <li>{{ huesped.usuario.username }}</li>
+                <li>{{ huesped.usuario.email }}</li>
+            </ul>
+        </div>
+    </div>
 </div>
 {% endblock %}
