--- a/rentcab/templates/registration/password_reset_done.html
+++ b/rentcab/templates/registration/password_reset_done.html
@@ -1,8 +1,9 @@
 {% extends "inquilinos/base.html" %}
-
 {% block content %}
-<br>
-<div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
-    <p>Te enviamos un correo con instrucciones para restaurar tu contraseña. Si no llega en unos minutos, revisá la carpeta de spam.</p> 
-</div>
+    <br/>
+    <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
+        <p>
+            Te enviamos un correo con instrucciones para restaurar tu contraseña. Si no llega en unos minutos, revisá la carpeta de spam.
+        </p>
+    </div>
 {% endblock %}
