--- a/rentcab/templates/registration/password_reset_complete.html
+++ b/rentcab/templates/registration/password_reset_complete.html
@@ -1,14 +1,21 @@
 {% extends "inquilinos/base.html" %}
 {% block content %}
-<br>
-  <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
-    <div class="container">
-    <div class="row">
-    <center><h5>La contraseña fue cambiada con éxito!</h5></center>
-    <br>
-  </div>
-    <div class="row">
-      <button class="btn btn-outline-primary btn-md px-5" onclick="location.href='{% url 'login' %}'" type="button">Iniciar sesión.</button></div>
-    </div>
+    <br/>
+    <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
+        <div class="container">
+            <div class="row">
+                <center>
+                    <h5>La contraseña fue cambiada con éxito!</h5>
+                </center>
+                <br/>
+            </div>
+            <div class="row">
+                <button class="btn btn-outline-primary btn-md px-5"
+                        onclick="location.href='{% url 'login' %}'"
+                        type="button">
+                    Iniciar sesión.
+                </button>
+            </div>
+        </div>
     </div>
 {% endblock %}
